syntax = "proto3";

option csharp_namespace = "Tags.Grpc.Protos";

import "google/protobuf/timestamp.proto";

package tags;

service TagsProtoService {
  rpc GetTag (GetTagRequest) returns (TagModel);
}

message TagModel {
  int32 id = 1;
  int32 authorId = 2;
  string content = 3;
  google.protobuf.Timestamp createdAt = 4;
}

message GetTagRequest {
  int32 id = 1;
}
